--- a/_config.yml
+++ b/_config.yml
@@ -53,19 +53,13 @@ github: rearcar92
 # lanyrd: mylanyrd
 email: rearcar92@gmail.com
 
-# authors:
-#     johndoe:
-#         name: Sang Cheol
-#         bio: A Man who travels the world eating noodles
-#         external-image: false
-#         picture: assets/images/profile.jpg
-#         twitter: johndoe
-#     jamesfoster:
-#         name: James Foster
-#         bio: A Man who develops software with coffee
-#         external-image: false
-#         picture: assets/images/james.jpg
-#         twitter: jamesfoster
+authors:
+    rearcar92:
+        name: Sang Cheol
+        bio: hello
+        external-image: false
+        picture: assets/images/profile.jpg
+    
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
