--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ resume: true
 resume-external: true
 resume-url: https://google.com/?q=my+resume
 
-url: https://rearcar92.github.io
+url: https://rearcar92.github.io/story
 # your url: https://rearcar92.github.io
 
 permalink: /:title/
@@ -54,7 +54,7 @@ github: rearcar92
 email: rearcar92@gmail.com
 
 authors:
-    johndoe:
+    rearcar92:
         name: Sang Cheol
         bio: hello
         external-image: false
